<resources>
    <string name="app_name">futboll</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="team_name">Team Name</string>
    <string name="matches_fragment">Matches Fragment</string>
    <string name="teams_fragment">Teams Fragment</string>
    <string name="no_data_found">No data found</string>
    <string name="overview">Overview</string>
    <string name="players">Players</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_match">Next Match</string>
    <string name="last_match">Last Match</string>
    <string name="vs">VS</string>
    <string name="shots">Shots</string>
    <string name="goals">Goals</string>
    <string name="substitutes">Substitutes</string>
    <string name="forward">Forward</string>
    <string name="midfield">Midfield</string>
    <string name="defense">Defense</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="lineups">Lineups</string>
    <string name="search_match">Search Match</string>
    <string name="no_matches_found">No matches found</string>
    <string name="search">Search</string>
    <string name="leagues">Leagues</string>
    <string-array name="league_names">
        <item>England Premier League</item>
        <item>Ligue 1</item>
        <item>Bundesliga</item>
        <item>Serie A</item>
        <item>La Liga</item>
        <item>Mayor League Soccer</item>
        <item>Primeira Liga</item>
        <item>A-League</item>
        <item>Scottish Premier League</item>
        <item>English Football League</item>
    </string-array>
</resources>