<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/matches_fragment_item"
            android:enabled="true"
            android:icon="@drawable/ic_matches"
            android:title="@string/matches"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/teams_fragment_item"
            android:enabled="true"
            android:icon="@drawable/ic_teams"
            android:title="@string/teams"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/league_fragment_item"
            android:enabled="true"
            android:icon="@drawable/ic_league"
            android:title="@string/leagues"
            app:showAsAction="ifRoom" />
</menu>